# ZeroEngine

./: CMakeLists.txt  README.md  Texture.h  main.cpp
ZEngine/: CMakeLists.txt
ZEngine/include/ZCore/: GCObject.hpp  Rtti.hpp  ZApp.hpp  ZEngine.hpp  ZEntity.hpp
ZEngine/src/ZCore/: ZApp.cpp  ZEngine.cpp  ZEntity.cpp
ZeroEngine/: CMakeLists.txt
ZeroEngine/include/Core/: ZApp.hpp
ZeroEngine/src/Core/: ZApp.cpp
include/ZEngine/: Rtti.hpp  ZAsset.hpp  ZBox2D.hpp  ZCamera.hpp  ZComponent.hpp  ZCore.hpp  ZEngine.hpp  ZEntity.hpp  ZOrthoRp.hpp  ZPhysicsPipeline.hpp  ZRef.hpp  ZRenderPipeline.hpp  ZRenderer.hpp  ZTexture.hpp
include/Zero/: BoxPhysics.h  OrthoRP.h  Rtti.h  Shader.h  engine.h
zero/: Mesh.h  Shader.h  Texture.h  engine.h
